# BridgePy

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
bridgePy/: __init__.py  connector.py  models.py
docs/: bridgePy.html  index.html  search.js
docs/bridgePy/: connector.html  models.html
examples/: main.py
