[metadata]
name = bridegPy
version = 0.1.1
description = A connector Python package to get market data
author = Satheesh Kumar Gopisetty
license = MIT

[options]
packages = find:
install_requires =
    paho-mqtt>=2.1.0
    requests>=2.32.3

[options.packages.find]
where = .

[options.package_data]
bridePy = ["docs/*"]